# datahipy

./: .all-contributorsrc  .buildinfo  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .releaserc.json  .zenodo.json  CHANGES.html  Dockerfile  LICENSE  LICENSE.html  Makefile  README.md  api_bids_subpackage.html  api_cli_subpackage.html  api_handlers_subpackage.html  api_utils_subpackage.html  citing.html  contributing.html  developer.html  docker-compose.yml  entrypoint.sh  get_version.py  index.html  installation.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  start.sh  test.sh  tox.ini  usage.html
.github/workflows/: documentation.yml  gitlab-sync.yml
_modules/: index.html
_modules/datahipy/bids/: bids_manager.html  dataset.html  electrophy.html  participant.html  validation.html  version.html
_modules/datahipy/cli/: run.html
_modules/datahipy/handlers/: dataset.html  participants.html  project.html
_modules/datahipy/utils/: versioning.html
_sources/: api_bids_subpackage.rst.txt  contributing.rst.txt  installation.rst.txt  usage.rst.txt
_static/: documentation_options.js
bids_tools/: __init__.py  _version.py  info.py
bids_tools/bids/: bids_manager.py  const.py  dataset.py  electrophy.py  participant.py  utils.py  validation.py  version.py
bids_tools/cli/: main.py  run.py
bids_tools/handlers/: dataset.py  participants.py  project.py
cwl/: README.md  bids-convert.cwl  db.create.cwl  db.get.cwl
data/importation_directory/temp_bids/: Read.md
data/input/: create_bids_db.json  data.json  data_to_import.json  db_get.json  get_bids_def.json  get_sub_info.json  sub_delete.json  sub_delete_file.json  sub_get.json  sub_import.json  sub_to_delete.json
data/output/: my_queried_definitions.json  my_queried_sub_info.json
data/output/BIDS-DATABASE/: participants.tsv
datahipy/: __init__.py  info.py  versioning.py
datahipy/bids/: bids_manager.py  const.py  dataset.py  participant.py  validation.py  version.py
datahipy/bids/config/: bids.json
datahipy/cli/: run.py
datahipy/handlers/: dataset.py  participants.py  project.py
datahipy/utils/: versioning.py
docs/: CHANGES.md  CHANGES.rst  LICENSE.rst  api_bids_module.rst  api_cli_module.rst  api_cli_subpackage.rst  api_handlers_module.rst  api_handlers_subpackage.rst  api_utils_subpackage.rst  citing.rst  conf.py  contributing.rst  contributors.rst  developer.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/examples/io/: create_dataset.json  create_project.json  create_project_output.json  dataset_checkout_tag.json  dataset_clone.json  dataset_clone_output.json  dataset_create_tag.json  dataset_get_tags.json  dataset_get_tags_output.json  dataset_publish.json  dataset_publish_output.json  dataset_release_version.json  dataset_release_version_output.json  delete_sub_file.json  get_dataset.json  get_dataset_output.json  get_datasets.json  get_datasets_output.json  get_sub.json  get_sub_output.json  import_project_doc.json  (+10 more)
input_json_examples/: db_create.json  sub_delete.json  sub_delete_file.json  sub_edit_clinical.json  sub_get.json  sub_import.json
scripts/: bids.json  bids_convert.py  bids_utils.py  convert.py  database_handler.py  dataset_handler.py  json_blueprints.py  main.py  participants_handler.py  requirements.json  server.py
scripts/docker/: entrypoint.sh  entrypoint_pytest.sh
test/: conftest.py  db_cleanup.bats  db_create.bats  db_get.bats  run.sh  run_pytest_cli.bats  run_tests.sh  sub_delete.bats  sub_delete_file.bats  sub_get.bats  sub_import.bats  test_dataset_cleanup.bats  test_db_cleanup.bats  test_db_create.bats  test_db_get.bats  test_sub_delete.bats  test_sub_delete_file.bats  test_sub_edit_clinical.bats  test_sub_get.bats  test_sub_import.bats
test/cli/: __init__.py  test_main.py  test_run.py  test_run_dataset.py  test_run_help.py  test_run_project.py  test_run_sub.py
test/test_data/: .gitignore
test/test_helper/: _common_setup.bash
(+3 files in other folders)
