[metadata]
author = The HIP team
author_email = support@hip.ch
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Developers
    License :: OSI Approved 
    Programming Language :: Python :: 3.8
description = bids_tools: Tools to manage BIDS datasets in the Human intracranial EEG platform.
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://hip-infrastructure.github.io
url = https://github.com/HIP-infrastructure/bids-converter

[options]
python_requires = >=3.8
install_requires =
    pandas == 1.3.5
    pybids >= 0.15.3
    scipy >= 1.6
    asyncio
    nest-asyncio

test_requires =
    pytest

packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    sphinx >= 1.8
    sphinx-argparse
    sphinx_rtd_theme
dev =
    black ~= 22.3.0
    pre-commit
    isort ~= 5.10.1
docs =
    %(doc)s
tests =
    pytest
    pytest-cov
    pytest-console-scripts
    pytest-env
all =
    %(doc)s
    %(dev)s
    %(tests)s

[options.package_data]
bids_tools =
    bids/config/*.json
    VERSION

[options.entry_points]
console_scripts =
    bids_tools=bids_tools.cli.run:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2

[versioneer]
VCS = git
style = pep440
versionfile_source = bids_tools/_version.py
versionfile_build = bids_tools/_version.py
tag_prefix =
parentdir_prefix = bids_tools-