[metadata]
author = The HIP team
author_email = support@hip.ch
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Developers
    License :: OSI Approved 
    Programming Language :: Python :: 3.8
description = datahipy: Tools to manage BIDS datasets in the Human intracranial EEG platform.
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://hip-infrastructure.github.io/datahipy
url = https://github.com/HIP-infrastructure/datahipy

[options]
python_requires = >=3.8
install_requires =
    bids_manager @ git+https://github.com/HIP-infrastructure/BIDS_Manager.git@dev
    pandas
    pybids >= 0.15.3
    scipy >= 1.6
    datalad >= 0.19.2
    datalad-neuroimaging >= 0.3.3

test_requires =
    pytest
    pytest-console-scripts
    pytest-cov
    pytest-order >= 1.1.0

packages = find:

[options.exclude_package_data]
* = test

[options.extras_require]
doc =
    pydot >= 1.2.3
    sphinx >= 6.1.3
    sphinx-argparse == 0.4.0
    sphinx_rtd_theme == 1.2.0
    recommonmark == 0.7.1
    sphinxcontrib-apidoc == 0.3.0
    sphinxemoji == 0.2.0
    mock == 5.0.1
    m2r2 == 0.3.2
    docutils == 0.18.1
    commonmark == 0.9.1
dev =
    black ~= 22.3.0
    pre-commit
    isort ~= 5.10.1
docs =
    %(doc)s
test =
    pytest
    pytest-cov
    pytest-console-scripts
    pytest-env
all =
    %(doc)s
    %(dev)s
    %(test)s

[options.package_data]
datahipy =
    bids/config/*.json
    VERSION

[options.entry_points]
console_scripts =
    datahipy=datahipy.cli.run:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
